--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,8 @@ dependencies {
     compile 'com.firebaseui:firebase-ui:1.2.0'
     compile 'com.android.support:design:25.1.1'
     testCompile 'junit:junit:4.12'
+    compile 'com.google.firebase:firebase-core:9.0.2'
+
 }
 apply plugin: 'com.google.gms.google-services'
 
