--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,12 +40,13 @@ dependencies {
 
 
     compile 'com.android.support:appcompat-v7:25.1.1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.1'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'io.reactivex.rxjava2:rxjava:2.0.1'
     compile 'com.firebaseui:firebase-ui:1.2.0'
     compile 'com.android.support:design:25.1.1'
     testCompile 'junit:junit:4.12'
+    compile 'com.android.support:cardview-v7:25.1.1'
+
     compile 'com.google.firebase:firebase-core:9.0.2'
 
 }
