--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".chatscreen.ChatActivity">
+        <activity android:name=".chatscreen.ChatActivity" android:windowSoftInputMode="adjustPan">
         </activity>
         <activity android:name=".SplashActivity">
             <intent-filter>
@@ -23,7 +23,7 @@
         </activity>
         <service
             android:enabled="true"
-            android:name="MyService"
+            android:name=".FirebaseMessageService"
             >
         </service>
     </application>
