--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".chatscreen.ChatActivity" android:windowSoftInputMode="adjustPan">
+        <activity android:name=".chatscreen.ChatActivity" >
         </activity>
         <activity android:name=".SplashActivity">
             <intent-filter>
